{
  "version": 4,
  "terraform_version": "1.1.0",
  "serial": 79,
  "lineage": "3b8167fe-e25d-5cfc-42c3-eca52aae445c",
  "resources": [
    {
      "module": "module.comprinno-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip-1",
      "provider": "module.comprinno-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d36f304512f7281f",
            "association_id": "eipassoc-024b4e6cac0cc26d5",
            "domain": "vpc",
            "id": "eipalloc-0d36f304512f7281f",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-09fc28abb486afee4",
            "private_dns": "ip-10-0-0-145.ap-south-1.compute.internal",
            "private_ip": "10.0.0.145",
            "public_dns": "ec2-3-109-161-187.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.161.187",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "comprinno-vpc-Eip"
            },
            "tags_all": {
              "Name": "comprinno-vpc-Eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.comprinno-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gateway",
      "provider": "module.comprinno-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:196565052768:internet-gateway/igw-0259580812ca86bf0",
            "id": "igw-0259580812ca86bf0",
            "owner_id": "196565052768",
            "tags": {
              "Name": "comprinno-vpc-igw"
            },
            "tags_all": {
              "Name": "comprinno-vpc-igw"
            },
            "vpc_id": "vpc-092002074a858c224"
          },
          "dependencies": [
            "module.comprinno-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.comprinno-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway-1",
      "provider": "module.comprinno-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d36f304512f7281f",
            "connectivity_type": "public",
            "id": "nat-01cbd60d5ec212086",
            "network_interface_id": "eni-09fc28abb486afee4",
            "private_ip": "10.0.0.145",
            "public_ip": "3.109.161.187",
            "subnet_id": "subnet-05de5b94ec92c2b0a",
            "tags": {
              "Name": "comprinno-vpc-NAT"
            },
            "tags_all": {
              "Name": "comprinno-vpc-NAT"
            }
          },
          "dependencies": [
            "module.comprinno-vpc.aws_eip.elastic-ip-1",
            "module.comprinno-vpc.aws_subnet.public-subnet",
            "module.comprinno-vpc.aws_vpc.vpc",
            "module.comprinno-vpc.data.aws_availability_zones.azes"
          ]
        }
      ]
    },
    {
      "module": "module.comprinno-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-subnet-rt",
      "provider": "module.comprinno-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:196565052768:route-table/rtb-0f0d9ecfcd061e754",
            "id": "rtb-0f0d9ecfcd061e754",
            "owner_id": "196565052768",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01cbd60d5ec212086",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "comprinno-vpc-private-subnet-route-table"
            },
            "tags_all": {
              "Name": "comprinno-vpc-private-subnet-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-092002074a858c224"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.comprinno-vpc.aws_eip.elastic-ip-1",
            "module.comprinno-vpc.aws_nat_gateway.nat-gateway-1",
            "module.comprinno-vpc.aws_subnet.public-subnet",
            "module.comprinno-vpc.aws_vpc.vpc",
            "module.comprinno-vpc.data.aws_availability_zones.azes"
          ]
        }
      ]
    },
    {
      "module": "module.comprinno-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-subnet-rt",
      "provider": "module.comprinno-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:196565052768:route-table/rtb-0f26839fcce2ecef9",
            "id": "rtb-0f26839fcce2ecef9",
            "owner_id": "196565052768",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0259580812ca86bf0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "comprinno-vpc-public-subnet-route-table"
            },
            "tags_all": {
              "Name": "comprinno-vpc-public-subnet-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-092002074a858c224"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.comprinno-vpc.aws_internet_gateway.internet-gateway",
            "module.comprinno-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.comprinno-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-ass",
      "provider": "module.comprinno-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f5a5c25821d202b",
            "route_table_id": "rtb-0f0d9ecfcd061e754",
            "subnet_id": "subnet-04f940bc9bf9652ee"
          },
          "dependencies": [
            "module.comprinno-vpc.aws_nat_gateway.nat-gateway-1",
            "module.comprinno-vpc.aws_route_table.private-subnet-rt",
            "module.comprinno-vpc.aws_subnet.private-subnet",
            "module.comprinno-vpc.aws_subnet.public-subnet",
            "module.comprinno-vpc.aws_vpc.vpc",
            "module.comprinno-vpc.data.aws_availability_zones.azes",
            "module.comprinno-vpc.aws_eip.elastic-ip-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0418af638c0d85cf9",
            "route_table_id": "rtb-0f0d9ecfcd061e754",
            "subnet_id": "subnet-007c0153715ae0f51"
          },
          "dependencies": [
            "module.comprinno-vpc.aws_eip.elastic-ip-1",
            "module.comprinno-vpc.aws_nat_gateway.nat-gateway-1",
            "module.comprinno-vpc.aws_route_table.private-subnet-rt",
            "module.comprinno-vpc.aws_subnet.private-subnet",
            "module.comprinno-vpc.aws_subnet.public-subnet",
            "module.comprinno-vpc.aws_vpc.vpc",
            "module.comprinno-vpc.data.aws_availability_zones.azes"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c493547b98b22a3a",
            "route_table_id": "rtb-0f0d9ecfcd061e754",
            "subnet_id": "subnet-092a259bdb35055e9"
          },
          "dependencies": [
            "module.comprinno-vpc.aws_eip.elastic-ip-1",
            "module.comprinno-vpc.aws_nat_gateway.nat-gateway-1",
            "module.comprinno-vpc.aws_route_table.private-subnet-rt",
            "module.comprinno-vpc.aws_subnet.private-subnet",
            "module.comprinno-vpc.aws_subnet.public-subnet",
            "module.comprinno-vpc.aws_vpc.vpc",
            "module.comprinno-vpc.data.aws_availability_zones.azes"
          ]
        }
      ]
    },
    {
      "module": "module.comprinno-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-ass",
      "provider": "module.comprinno-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdab618e418d44ee",
            "route_table_id": "rtb-0f26839fcce2ecef9",
            "subnet_id": "subnet-05de5b94ec92c2b0a"
          },
          "dependencies": [
            "module.comprinno-vpc.aws_vpc.vpc",
            "module.comprinno-vpc.data.aws_availability_zones.azes",
            "module.comprinno-vpc.aws_internet_gateway.internet-gateway",
            "module.comprinno-vpc.aws_route_table.public-subnet-rt",
            "module.comprinno-vpc.aws_subnet.public-subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5cff462ba063ce1",
            "route_table_id": "rtb-0f26839fcce2ecef9",
            "subnet_id": "subnet-0d54fabdca03aa823"
          },
          "dependencies": [
            "module.comprinno-vpc.aws_internet_gateway.internet-gateway",
            "module.comprinno-vpc.aws_route_table.public-subnet-rt",
            "module.comprinno-vpc.aws_subnet.public-subnet",
            "module.comprinno-vpc.aws_vpc.vpc",
            "module.comprinno-vpc.data.aws_availability_zones.azes"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02806e793704f9725",
            "route_table_id": "rtb-0f26839fcce2ecef9",
            "subnet_id": "subnet-028d491ca4535527a"
          },
          "dependencies": [
            "module.comprinno-vpc.aws_internet_gateway.internet-gateway",
            "module.comprinno-vpc.aws_route_table.public-subnet-rt",
            "module.comprinno-vpc.aws_subnet.public-subnet",
            "module.comprinno-vpc.aws_vpc.vpc",
            "module.comprinno-vpc.data.aws_availability_zones.azes"
          ]
        }
      ]
    },
    {
      "module": "module.comprinno-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "module.comprinno-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:196565052768:subnet/subnet-04f940bc9bf9652ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-04f940bc9bf9652ee",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "196565052768",
            "tags": {
              "Name": "comprinno-vpc-private-subnet-1"
            },
            "tags_all": {
              "Name": "comprinno-vpc-private-subnet-1"
            },
            "vpc_id": "vpc-092002074a858c224"
          },
          "dependencies": [
            "module.comprinno-vpc.aws_vpc.vpc",
            "module.comprinno-vpc.data.aws_availability_zones.azes"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:196565052768:subnet/subnet-007c0153715ae0f51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-007c0153715ae0f51",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "196565052768",
            "tags": {
              "Name": "comprinno-vpc-private-subnet-2"
            },
            "tags_all": {
              "Name": "comprinno-vpc-private-subnet-2"
            },
            "vpc_id": "vpc-092002074a858c224"
          },
          "dependencies": [
            "module.comprinno-vpc.aws_vpc.vpc",
            "module.comprinno-vpc.data.aws_availability_zones.azes"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:196565052768:subnet/subnet-092a259bdb35055e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-092a259bdb35055e9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "196565052768",
            "tags": {
              "Name": "comprinno-vpc-private-subnet-3"
            },
            "tags_all": {
              "Name": "comprinno-vpc-private-subnet-3"
            },
            "vpc_id": "vpc-092002074a858c224"
          },
          "dependencies": [
            "module.comprinno-vpc.aws_vpc.vpc",
            "module.comprinno-vpc.data.aws_availability_zones.azes"
          ]
        }
      ]
    },
    {
      "module": "module.comprinno-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "module.comprinno-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:196565052768:subnet/subnet-05de5b94ec92c2b0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-05de5b94ec92c2b0a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "196565052768",
            "tags": {
              "Name": "comprinno-vpc-public-subnet-1"
            },
            "tags_all": {
              "Name": "comprinno-vpc-public-subnet-1"
            },
            "vpc_id": "vpc-092002074a858c224"
          },
          "dependencies": [
            "module.comprinno-vpc.aws_vpc.vpc",
            "module.comprinno-vpc.data.aws_availability_zones.azes"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:196565052768:subnet/subnet-0d54fabdca03aa823",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d54fabdca03aa823",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "196565052768",
            "tags": {
              "Name": "comprinno-vpc-public-subnet-2"
            },
            "tags_all": {
              "Name": "comprinno-vpc-public-subnet-2"
            },
            "vpc_id": "vpc-092002074a858c224"
          },
          "dependencies": [
            "module.comprinno-vpc.aws_vpc.vpc",
            "module.comprinno-vpc.data.aws_availability_zones.azes"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:196565052768:subnet/subnet-028d491ca4535527a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-028d491ca4535527a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "196565052768",
            "tags": {
              "Name": "comprinno-vpc-public-subnet-3"
            },
            "tags_all": {
              "Name": "comprinno-vpc-public-subnet-3"
            },
            "vpc_id": "vpc-092002074a858c224"
          },
          "dependencies": [
            "module.comprinno-vpc.aws_vpc.vpc",
            "module.comprinno-vpc.data.aws_availability_zones.azes"
          ]
        }
      ]
    },
    {
      "module": "module.comprinno-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.comprinno-vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:196565052768:vpc/vpc-092002074a858c224",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b4915154dd0dee3a",
            "default_route_table_id": "rtb-0cd9010fe117bcf4d",
            "default_security_group_id": "sg-0c2f34858dc96deac",
            "dhcp_options_id": "dopt-cd19aba6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-092002074a858c224",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cd9010fe117bcf4d",
            "owner_id": "196565052768",
            "tags": {
              "Name": "comprinno-vpc"
            },
            "tags_all": {
              "Name": "comprinno-vpc"
            }
          }
        }
      ]
    }
  ]
}